# generalddc

./: .gitignore  CMakeLists.txt  README.md
include/GeneralDDC/: Device.h  DeviceImpl.h  DeviceImpl_APPLE.h  DeviceImpl_LINUX.h  DeviceImpl_WIN32.h  Exceptions.h  List.h  Types.h
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Device.cpp  DeviceImpl_APPLE.cpp  DeviceImpl_LINUX.cpp  DeviceImpl_WIN32.cpp  List.cpp
